--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
 					<th>שם העסק</th>
 					<th>סוג העסק</th>
 					<th>רחוב</th>
-					<th>מספר</th>
 				</tr>
 			</thead>
 			<tbody id="fire_area_tbody">
@@ -66,7 +65,7 @@
 		</table>
 	  	</div>
 	  	<div id="Docs">
-	  		<section class="ac-container">
+	  		<div class="ac-container">
 				<div>
 					<input id="ac-1" name="accordion-1" type="radio" onclick="load_doc('viewer-ac-1', 'abc.odt')"/>
 					<label for="ac-1">abc</label>
@@ -81,7 +80,35 @@
 						<iframe id="viewer-ac-2" src = "" width='300' height='500'></iframe>
 					</article>
 				</div>
-			</section>
+								<div>
+					<input id="ac-3" name="accordion-3" type="radio" onclick="load_doc('viewer-ac-3', 'abc.odt')"/>
+					<label for="ac-3">abc</label>
+					<article class="ac-large">
+						<iframe id="viewer-ac-3" src = "" width='300' height='500'></iframe>
+					</article>
+				</div>
+				<div>
+					<input id="ac-4" name="accordion-4" type="radio" onclick="load_doc('viewer-ac-4', 'abd.odt')"/>
+					<label for="ac-4">abd</label>
+					<article class="ac-large">
+						<iframe id="viewer-ac-4" src = "" width='300' height='500'></iframe>
+					</article>
+				</div>
+								<div>
+					<input id="ac-5" name="accordion-5" type="radio" onclick="load_doc('viewer-ac-5', 'abc.odt')"/>
+					<label for="ac-5">abc</label>
+					<article class="ac-large">
+						<iframe id="viewer-ac-5" src = "" width='300' height='500'></iframe>
+					</article>
+				</div>
+				<div>
+					<input id="ac-6" name="accordion-6" type="radio" onclick="load_doc('viewer-ac-6', 'abd.odt')"/>
+					<label for="ac-6">abd</label>
+					<article class="ac-large">
+						<iframe id="viewer-ac-6" src = "" width='300' height='500'></iframe>
+					</article>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
