--- a/index.html
+++ b/index.html
@@ -67,43 +67,37 @@
 	  	<div id="Docs">
 	  		<div class="ac-container">
 				<div>
-					<input id="ac-1" name="accordion-1" type="radio" onclick="load_doc('viewer-ac-1', 'abc.odt')"/>
-					<label for="ac-1">abc</label>
+					<label id="ac-1" onclick="load_doc('ac-1', 'abc.odt')">abc</label>
 					<article class="ac-large">
 						<iframe id="viewer-ac-1" src = "" width='300' height='500'></iframe>
 					</article>
 				</div>
 				<div>
-					<input id="ac-2" name="accordion-1" type="radio" onclick="load_doc('viewer-ac-2', 'abd.odt')"/>
-					<label for="ac-2">abd</label>
+					<label id="ac-2" onclick="load_doc('ac-2', 'abd.odt')">abd</label>
 					<article class="ac-large">
 						<iframe id="viewer-ac-2" src = "" width='300' height='500'></iframe>
 					</article>
 				</div>
-								<div>
-					<input id="ac-3" name="accordion-3" type="radio" onclick="load_doc('viewer-ac-3', 'abc.odt')"/>
-					<label for="ac-3">abc</label>
+				<div>
+					<label id="ac-3" onclick="load_doc('ac-3', 'abc.odt')">abc</label>
 					<article class="ac-large">
 						<iframe id="viewer-ac-3" src = "" width='300' height='500'></iframe>
 					</article>
 				</div>
 				<div>
-					<input id="ac-4" name="accordion-4" type="radio" onclick="load_doc('viewer-ac-4', 'abd.odt')"/>
-					<label for="ac-4">abd</label>
+					<label id="ac-4" onclick="load_doc('ac-4', 'abd.odt')">abd</label>
 					<article class="ac-large">
 						<iframe id="viewer-ac-4" src = "" width='300' height='500'></iframe>
 					</article>
 				</div>
 								<div>
-					<input id="ac-5" name="accordion-5" type="radio" onclick="load_doc('viewer-ac-5', 'abc.odt')"/>
-					<label for="ac-5">abc</label>
+					<label id="ac-5" onclick="load_doc('ac-5', 'abc.odt')">abc</label>
 					<article class="ac-large">
 						<iframe id="viewer-ac-5" src = "" width='300' height='500'></iframe>
 					</article>
 				</div>
 				<div>
-					<input id="ac-6" name="accordion-6" type="radio" onclick="load_doc('viewer-ac-6', 'abd.odt')"/>
-					<label for="ac-6">abd</label>
+					<label id="ac-6" onclick="load_doc('ac-6', 'abd.odt')">abd</label>
 					<article class="ac-large">
 						<iframe id="viewer-ac-6" src = "" width='300' height='500'></iframe>
 					</article>
