--- a/index.html
+++ b/index.html
@@ -66,42 +66,13 @@
 	  	</div>
 	  	<div id="Docs">
 	  		<div class="ac-container">
-				<div>
-					<label id="ac-1" onclick="load_doc('ac-1', 'abc.odt')">abc</label>
-					<article class="ac-large">
-						<iframe id="viewer-ac-1" src = "" width='300' height='500'></iframe>
-					</article>
-				</div>
-				<div>
-					<label id="ac-2" onclick="load_doc('ac-2', 'abd.odt')">abd</label>
-					<article class="ac-large">
-						<iframe id="viewer-ac-2" src = "" width='300' height='500'></iframe>
-					</article>
-				</div>
-				<div>
-					<label id="ac-3" onclick="load_doc('ac-3', 'abc.odt')">abc</label>
-					<article class="ac-large">
-						<iframe id="viewer-ac-3" src = "" width='300' height='500'></iframe>
-					</article>
-				</div>
-				<div>
-					<label id="ac-4" onclick="load_doc('ac-4', 'abd.odt')">abd</label>
-					<article class="ac-large">
-						<iframe id="viewer-ac-4" src = "" width='300' height='500'></iframe>
-					</article>
-				</div>
-								<div>
-					<label id="ac-5" onclick="load_doc('ac-5', 'abc.odt')">abc</label>
-					<article class="ac-large">
-						<iframe id="viewer-ac-5" src = "" width='300' height='500'></iframe>
-					</article>
-				</div>
-				<div>
-					<label id="ac-6" onclick="load_doc('ac-6', 'abd.odt')">abd</label>
-					<article class="ac-large">
-						<iframe id="viewer-ac-6" src = "" width='300' height='500'></iframe>
-					</article>
-				</div>
+	  			<div id="ac-viewer"></div>
+				<label id="ac-1" onclick="load_doc('abc.odt')">abc</label>
+				<label id="ac-2" onclick="load_doc('abd.odt')">abd</label>
+				<label id="ac-3" onclick="load_doc('abc.odt')">abc</label>
+				<label id="ac-4" onclick="load_doc('abd.odt')">abd</label>
+				<label id="ac-5" onclick="load_doc('abc.odt')">abc</label>
+				<label id="ac-6" onclick="load_doc('abd.odt')">abd</label>
 			</div>
 		</div>
 	</div>
