--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
 	<div id="container">
 		<div id="dl-menu" class="dl-menuwrapper">
-				<button id="showLeft" class="dl-trigger" onclick="toggle_menu()">Open Menu</button>
+				<button id="showLeft" class="dl-trigger active" onclick="toggle_menu()">Open Menu</button>
 				<img src="images/uparrow.png" onclick="scroll_to_top();">
 		</div>
-		<nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
+		<nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left cbp-spmenu-open" id="cbp-spmenu-s1">
 			<h3>Menu</h3>
 			<a href="#" onclick="showQueris()">Queries</a>
 			<a href="#" onclick="showDocs()">Docs</a>
