--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div id="container">
 		<div id="dl-menu" class="dl-menuwrapper">
-				<button id="showLeft" class="dl-trigger active" onclick="toggle_menu()">Open Menu</button>
+				<a id="showLeft" class="dl-trigger active" src="#" onclick="toggle_menu()">Open Menu</a>
 				<img src="images/uparrow.png" onclick="scroll_to_top();">
 		</div>
 		<nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left cbp-spmenu-open" id="cbp-spmenu-s1">
