--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 	<div id="container">
 		<div id="dl-menu" class="dl-menuwrapper">
 				<a id="showLeft" class="dl-trigger active" src="#" onclick="toggle_menu()">Open Menu</a>
+				<!--<a src="#" onclick="showQueris()">Queris</a> -->
+				<!--<a src="#" onclick="showDocs()">Docs</a> -->
 				<img src="images/uparrow.png" onclick="scroll_to_top();">
 		</div>
-		<nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left cbp-spmenu-open" id="cbp-spmenu-s1">
+		<div class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left cbp-spmenu-open" id="cbp-spmenu-s1">
 			<h3>Menu</h3>
 			<a href="#" onclick="showQueris()">Queries</a>
 			<a href="#" onclick="showDocs()">Docs</a>
-		</nav>
+		</div>
 		<ul id="bokeh">
 				<li></li>
 				<li></li>
