--- a/index.html
+++ b/index.html
@@ -17,17 +17,16 @@
 				<!--<a src="#" onclick="showDocs()">Docs</a> -->
 				<img src="images/uparrow.png" onclick="scroll_to_top();">
 		</div>
-		<div class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left cbp-spmenu-open" id="cbp-spmenu-s1">
-			<h3>Menu</h3>
-			<a href="#" onclick="showQueris()">Queries</a>
-			<a href="#" onclick="showDocs()">Docs</a>
-		</div>
 		<ul id="bokeh">
 				<li></li>
 				<li></li>
 				<li></li>
 				<li></li>
 		</ul>
+		<div class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left " id="cbp-spmenu-s1">
+			<a href="#" onclick="showQueris()">Queries</a>
+			<a href="#" onclick="showDocs()">Docs</a>
+		</div>
 		<div id="Queries">
 		<form class="cbp-mc-form">
 			<div class="cbp-mc-column">
