--- a/index.html
+++ b/index.html
@@ -68,12 +68,8 @@
 	  	<div id="Docs">
 	  		<div class="ac-container">
 	  			<div id="ac-viewer"></div>
-				<label id="ac-1" onclick="load_doc('abc.odt')">abc</label>
-				<label id="ac-2" onclick="load_doc('abd.odt')">abd</label>
-				<label id="ac-3" onclick="load_doc('abc.odt')">abc</label>
-				<label id="ac-4" onclick="load_doc('abd.odt')">abd</label>
-				<label id="ac-5" onclick="load_doc('abc.odt')">abc</label>
-				<label id="ac-6" onclick="load_doc('abd.odt')">abd</label>
+				<label id="ac-1" onclick="load_doc('example1.odt')">example1</label>
+				<label id="ac-2" onclick="load_doc('example2.odt')">example2</label>
 			</div>
 		</div>
 	</div>
