--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>FireArea</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 	<link rel="stylesheet" href="style/style.css" />
-	<script src="behavior/jquery-1.9.1.js"></script>  
+	<script src="behavior/jquery-1.9.1.js"></script>    
 	<script src="behavior/behavior.js"></script>
+	<script src="behavior/iscroll.js"></script>
 	<link rel="shortcut icon" href="images/fire.ico">
 </head>
 <body>
-	<div id="container">
 		<div id="dl-menu" class="dl-menuwrapper">
 				<a id="showLeft" class="dl-trigger active" src="#" onclick="toggle_menu()">Open Menu</a>
-				<!--<a src="#" onclick="showQueris()">Queris</a> -->
-				<!--<a src="#" onclick="showDocs()">Docs</a> -->
-				<img src="images/uparrow.png" onclick="scroll_to_top();">
 		</div>
 		<ul id="bokeh">
 				<li></li>
@@ -23,11 +20,14 @@
 				<li></li>
 				<li></li>
 		</ul>
-		<div class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left " id="cbp-spmenu-s1">
-			<a href="#" onclick="showQueris()">Queries</a>
-			<a href="#" onclick="showDocs()">Docs</a>
+		<div id="Menu" class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left " >
+			<div id="scroller">
+				<a href="#" onclick="showQueris()">Queries</a>
+				<a href="#" onclick="showDocs()">Docs</a>
+			</div>
 		</div>
 		<div id="Queries">
+		<div id="scroller">
 		<form class="cbp-mc-form">
 			<div class="cbp-mc-column">
 				<label>שם העסק</label>
@@ -48,12 +48,11 @@
 	 			<input type="text" id="street_name" placeholder="רחוב">
 	 			<label>מספר</label>
 	 			<input type="text" id="street_num" placeholder="מספר">
-	 			<div class="cbp-mc-submit-wrap"></div>
-		</div>
- 				<button onclick="clean_form();"><span>נקה</span></button>
+	 			
+	 			<button onclick="clean_form();"><span>נקה</span></button>
  				<button onclick="get_results();"><span>הצג</span></button>
-	  	</form>
- 	 		<table id="fire_area_table" dir="rtl">
+ 				
+ 			<table id="fire_area_table" dir="rtl">
 			<thead>
 				<tr>
 					<th>שם העסק</th>
@@ -64,14 +63,32 @@
 			<tbody id="fire_area_tbody">
 			</tbody>
 		</table>
+
+		</div>		
+	  	</form>
+		</div>
 	  	</div>
 	  	<div id="Docs">
+	  		<div id="scroller">
 	  		<div class="ac-container">
 	  			<div id="ac-viewer"></div>
 				<label id="ac-1" onclick="load_doc('example1.odt')">example1</label>
 				<label id="ac-2" onclick="load_doc('example2.odt')">example2</label>
+				<label id="ac-1" onclick="load_doc('example1.odt')">example1</label>
+				<label id="ac-2" onclick="load_doc('example2.odt')">example2</label>
+				<label id="ac-1" onclick="load_doc('example1.odt')">example1</label>
+				<label id="ac-2" onclick="load_doc('example2.odt')">example2</label>
+				<label id="ac-1" onclick="load_doc('example1.odt')">example1</label>
+				<label id="ac-2" onclick="load_doc('example2.odt')">example2</label>
+				<label id="ac-1" onclick="load_doc('example1.odt')">example1</label>
+				<label id="ac-2" onclick="load_doc('example2.odt')">example2</label>
+				<label id="ac-1" onclick="load_doc('example1.odt')">example1</label>
+				<label id="ac-2" onclick="load_doc('example2.odt')">example2</label>
+				<label id="ac-1" onclick="load_doc('example1.odt')">example1</label>
+				<label id="ac-2" onclick="load_doc('example2.odt')">example2</label>
+			</div>
 			</div>
 		</div>
-	</div>
+		<div id="footer"></div>
 </body>
 </html>
