--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
 		<div id="dl-menu" class="dl-menuwrapper">
 				<a id="showLeft" class="dl-trigger active" src="#" onclick="toggle_menu()">Open Menu</a>
+				<img src="images/uparrow.png" onclick="scroll_to_top();">
 		</div>
 		<ul id="bokeh">
 				<li></li>
@@ -71,21 +72,21 @@
 	  	<div id="Docs">
 	  		<div id="scroller">
 	  		<div class="ac-container">
-	  			<div id="ac-viewer"></div>
-				<label id="ac-1" onclick="load_doc('example1.odt')">example1</label>
-				<label id="ac-2" onclick="load_doc('example2.odt')">example2</label>
-				<label id="ac-1" onclick="load_doc('example1.odt')">example1</label>
-				<label id="ac-2" onclick="load_doc('example2.odt')">example2</label>
-				<label id="ac-1" onclick="load_doc('example1.odt')">example1</label>
-				<label id="ac-2" onclick="load_doc('example2.odt')">example2</label>
-				<label id="ac-1" onclick="load_doc('example1.odt')">example1</label>
-				<label id="ac-2" onclick="load_doc('example2.odt')">example2</label>
-				<label id="ac-1" onclick="load_doc('example1.odt')">example1</label>
-				<label id="ac-2" onclick="load_doc('example2.odt')">example2</label>
-				<label id="ac-1" onclick="load_doc('example1.odt')">example1</label>
-				<label id="ac-2" onclick="load_doc('example2.odt')">example2</label>
-				<label id="ac-1" onclick="load_doc('example1.odt')">example1</label>
-				<label id="ac-2" onclick="load_doc('example2.odt')">example2</label>
+	  			<ul>
+				<li id="ac-1" onclick="load_doc('example1.odt')">example1</li>
+				<li id="ac-2" onclick="load_doc('example2.odt')">example2</li>
+								<li id="ac-1" onclick="load_doc('example1.odt')">example1</li>
+				<li id="ac-2" onclick="load_doc('example2.odt')">example2</li>
+								<li id="ac-1" onclick="load_doc('example1.odt')">example1</li>
+				<li id="ac-2" onclick="load_doc('example2.odt')">example2</li>
+								<li id="ac-1" onclick="load_doc('example1.odt')">example1</li>
+				<li id="ac-2" onclick="load_doc('example2.odt')">example2</li>
+								<li id="ac-1" onclick="load_doc('example1.odt')">example1</li>
+				<li id="ac-2" onclick="load_doc('example2.odt')">example2</li>
+								<li id="ac-1" onclick="load_doc('example1.odt')">example1</li>
+				<li id="ac-2" onclick="load_doc('example2.odt')">example2</li>
+				</ul>
+				<div id="ac-viewer"></div>
 			</div>
 			</div>
 		</div>
